z-index fix

--- a/assets/scss/about.scss
+++ b/assets/scss/about.scss
@@ -12,7 +12,7 @@
 	-webkit-transition: visibility 0.35s linear, opacity 0.35s linear;
 	transition: visibility 0.35s linear, opacity 0.35s linear;
 	overflow: auto;
-  z-index: 999;
+  z-index: 1200;
 }
 
 #about.about-active {
